--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -19,15 +19,15 @@ services:
     command: litestar run --reload --host 0.0.0.0 --port 8000
     restart: always
     <<: *development-volumes
-  migrator:
-    build:
-      context: .
-      dockerfile: deploy/docker/dev/Dockerfile
-    command: litestar database upgrade --no-prompt
-    restart: "no"
-    <<: *development-volumes
-    env_file:
-      - .env.docker.example
-    depends_on:
-      db:
-        condition: service_healthy
+  # migrator:
+  #   build:
+  #     context: .
+  #     dockerfile: deploy/docker/dev/Dockerfile
+  #   command: litestar database upgrade --no-prompt
+  #   restart: "no"
+  #   <<: *development-volumes
+  #   env_file:
+  #     - .env.docker.example
+  #   depends_on:
+  #     db:
+  #       condition: service_healthy
