--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,12 +36,15 @@ services:
       - "8000:8000"
     environment:
       SAQ_USE_SERVER_LIFESPAN: "false"
+      COMPOSE_BAKE: "true"
     env_file:
       - .env
     volumes:
       - ./chat_history:/workspace/app/chat_history
       - ./download_history:/workspace/app/download_history
-
+      - ./credentials:/workspace/app/credentials
+     
+      
  
   # migrator:
   #   build:
