feat: added a new tool to allow agent post comment on YouTube by provide postId

--- a/.env.example
+++ b/.env.example
@@ -33,5 +33,6 @@ CHAT_API_BASE_URL="http://localhost:8000"
 # permanent chat & download history
 CHAT_HISTORY_FOLDER_PATH=/workspace/app/chat_history
 DOWNLOAD_FOLDER_PATH=/workspace/app/download_history
-YOUTUBE_SCOPES=https://www.googleapis.com/auth/youtube.upload
+YOUTUBE_SCOPES=["https://www.googleapis.com/auth/youtube.upload", "https://www.googleapis.com/auth/youtube.force-ssl"]
+
 OAUTH_REDIRECT_URI=http://localhost:8000/api/chats/oauth2callback
