--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
     "google-auth-oauthlib>=1.2.1",
     "google-auth-httplib2>=0.2.0",
     "asyncpraw>=7.2.0",
+    "youtube-transcript-api>=1.0.3",
 ]
 
 keywords = ["litestar", "sqlalchemy", "alembic", "fullstack", "api", "asgi", "litestar", "spa"]
